Fix location id for current limit violation (#119)
Signed-off-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>